# theory_of_concurrent_systems

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_ccs.cpp  main_hml.cpp
antlr4/: adl.g4  example.txt
include/ccs/: act.h  ccs.h  generate_lts.h
include/hml/: LTS.h  Rel.h  basic.h  hml.h  hml_formula.h  semantics.h  system.h
src/ccs/: act.cpp  ccs.cpp  generate_lts.cpp
src/hml/: LTS.cpp  Rel.cpp  hml_formula.cpp  semantics.cpp  system.cpp
